# eznerf

./: .gitignore  LICENSE  README.md  data.py  encoder.py  environment.yaml  environment.yml  eznerf.py  load_data.py  model.py  nerf.py  pyproject.toml  rays.py  render.py  resize.py  sample.py
animate/: animate.py
config/: config.py  full-res.yaml  half-res.yaml  lego.yaml
dataloader/: data.py
encoder/: encoder.py
eval/: template.html.jinja  test.py
model/: model.py
rays/: README.md  rays.py
render/: README.md  render.py
run/: README.md  run.py  template.html.jinja  train.py
sample/: README.md  sample.py
train/: train.py
util/: download_example_data.sh  infinite_iterable.py  log.py  looping_dataloader.py
util/resize/: README.md  resize.py
