[project]
name = "eznerf"
version = "0.1.0"
description = "An organized, documented, educational implementation of NeRF in PyTorch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "typer>=0.14.0",
    "wandb>=0.18.7",
]
